--- a/public/project/client/index.html
+++ b/public/project/client/index.html
@@ -36,7 +36,7 @@
 <!--<div ng-include="'views/searchBar/searchBar.view.html'"></div>-->
 
 <!-- Page Content -->
-<div class="container-fluid">
+<div class="container-fluid clearfix">
     <div class="full" ng-view ></div>
 </div>
 <!-- /.container -->
